--- a/Makefile.am
+++ b/Makefile.am
@@ -6,12 +6,6 @@ include_HEADERS = include/raft.h
 raftincludedir = $(includedir)/raft
 raftinclude_HEADERS =
 
-if WINDOWS
-
-  AM_CFLAGS += -D__USE_MINGW_ANSI_STDIO
-
-endif #WINDOWS
-
 lib_LTLIBRARIES = libraft.la
 libraft_la_CFLAGS = $(AM_CFLAGS) -fvisibility=hidden
 libraft_la_LDFLAGS = -version-info 0:7:0
@@ -43,10 +37,8 @@ libraft_la_SOURCES = \
   src/tracing.c
 
 if LINUX
-
-  libraft_la_SOURCES += syscall.c
-
-endif #LINUX
+libraft_la_SOURCES += src/syscall.c
+endif
 
 bin_PROGRAMS =
 
@@ -176,10 +168,8 @@ test_unit_uv_CFLAGS = $(AM_CFLAGS) -Wno-conversion
 test_unit_uv_LDADD = libtest.la
 
 if LINUX
-
-  test_unit_uv_SOURCES += syscall.c
-  
-endif #LINUX
+test_unit_uv_SOURCES += src/syscall.c
+endif
 
 test_integration_uv_SOURCES = \
   test/integration/main_uv.c \
